--- a/src/main/resources/io/github/flauberjp/templates/initialGithubProject/template_index.html
+++ b/src/main/resources/io/github/flauberjp/templates/initialGithubProject/template_index.html
@@ -6,15 +6,7 @@
     <title>My Git usage evidences</title>
 </head>
 <body>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Date of Git usage</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+    <embed type="text/plain" src="evidences.txt" width="500" height="200">
 </body>
 
 </html>
